# ros_control_and_gazebo_simple_position_controller

simple_example_description/: CMakeLists.txt  README.md  package.xml
simple_example_description/config/: config.yaml
simple_example_description/launch/: spawn_robot.launch
simple_example_description/src/: hello.cpp
simple_example_description/urdf/: robot.urdf
